--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
 <h2>CSS</h2>
 <p>Cascading Style Sheets (Em português, Folha de Estilo em Cascata) estiliza a sua página web.<p></p>
+<img src="Olá Mundo.png" alt="Imagem com figuras geometricas, o planeta de fundo com a mensagem Olá Mundo"
 
  </section>
 
