construção do mais.js

--- a/index.html
+++ b/index.html
@@ -4,33 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>hello world</title>
+    <link rel="stylesheet" href="style.css">
+
+
 </head>
 <body>
 
  <header>
 <h1>Hello World</h1>
-
-<p>Que bom te ver aqui, Eduardo e Arthur.</p>
-
-
- </header>
+<p>Que bom te ver aqui, <span id="nome-usuário">fulano</span></p>
+ 
+</header>
  
 
  <section>
 <h2>HTML</h2>
 <P>Hypertext Markup Language (Em português, Linguagem de Marcação de Hipertexto) estrutura a sua página web.</P>
 
-
 <h2>CSS</h2>
 <p>Cascading Style Sheets (Em português, Folha de Estilo em Cascata) estiliza a sua página web.<p></p>
-<img src="Olá Mundo.png" alt="Imagem com figuras geometricas, o planeta de fundo com a mensagem Olá Mundo"
+<img src="Olá Mundo.png" alt="Imagem com figuras geometricas, o planeta de fundo com a mensagem Olá Mundo">;
+
 
  </section>
 
  <footer> 
-<p>Uma página desenvolvida por Alura Start</p>
+<p>Uma página desenvolvida por Eduardo Motta</p>
 
  </footer>
- 
+ <script src="main.js"></script>
 </body>
 </html>
